--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: Velotaf API
-            description: Application de gestion de velotaf
+            title: PizzaExpressAPI
+            description: Application de vente de pizza
             version: 1.0.0
         security:
             - jwt: []
