--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,12 +23,8 @@ security:
             jwt: ~
 
     access_control:
-        - { path: ^/api/sectionProduits, roles: PUBLIC_ACCESS }
-        - { path: ^/api/produits, roles: PUBLIC_ACCESS }
-        - { path: ^/api/token, roles: PUBLIC_ACCESS }
-        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
-        - { path: ^/api/users, roles: ROLE_ADMIN }
-        - { path: ^/api, roles: ROLE_USER }
+        - { path: ^/api, roles: PUBLIC_ACCESS }
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
